[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/Resources/Fonts/playmegames_64.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/Scenes/Buttons/NewGameButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Scenes/Buttons/InstructionsButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Scenes/Buttons/CreditsButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Scenes/Effects/FadeIn.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/Resources/assets-Recovered-Sheet.png" type="Texture" id=6]
[ext_resource path="res://src/Scenes/Levels/TitleScreen.gd" type="Script" id=7]
[ext_resource path="res://assets/Resources/Fonts/playmegames_36.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/Resources/Fonts/manaspc.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://assets/audio/Menu Move.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/audio/Menu Select.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/audio/Menu_fundo.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/Sprites/speaker-icon-sound-icon-white.png" type="Texture" id=13]
[ext_resource path="res://assets/Sprites/sem_som.png" type="Texture" id=14]
[ext_resource path="res://src/Scenes/Levels/HighScore.gd" type="Script" id=15]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 9 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 60.0
margin_top = 60.0
margin_right = 964.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu"]
margin_right = 904.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "PLACEHOLDER"
align = 1
valign = 1

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 69.0
margin_right = 904.0
margin_bottom = 510.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 568.0
margin_bottom = 441.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1

[node name="NewGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_top = 95.0
margin_right = 310.0
margin_bottom = 165.0
rect_min_size = Vector2( 310, 70 )
size_flags_horizontal = 0
size_flags_stretch_ratio = 2.14
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_constants/hseparation = 0

[node name="InstructionsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 195.0
margin_right = 568.0
margin_bottom = 255.0
scene_to_load = "res://src/Scenes/Levels/TestLevel.tscn"

[node name="CreditsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 285.0
margin_right = 568.0
margin_bottom = 345.0
scene_to_load = "res://src/Scenes/Levels/CreditsScreen.tscn"

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/CenterRow"]
margin_left = 572.0
margin_right = 904.0
margin_bottom = 441.0

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow/VBoxContainer"]
margin_right = 332.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Bitinho" type="TextureRect" parent="Menu/CenterRow/VBoxContainer/CenterContainer"]
margin_left = 16.0
margin_right = 316.0
margin_bottom = 400.0
rect_min_size = Vector2( 300, 400 )
texture = ExtResource( 6 )
stretch_mode = 7

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/CenterRow/VBoxContainer"]
margin_top = 404.0
margin_right = 332.0
margin_bottom = 441.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreTitle" type="Label" parent="Menu/CenterRow/VBoxContainer/HBoxContainer"]
margin_right = 216.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 1, 0.0313726, 0.690196, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "highscore"

[node name="HighScore" type="Label" parent="Menu/CenterRow/VBoxContainer/HBoxContainer"]
margin_left = 236.0
margin_right = 332.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 1, 0.0313726, 0.690196, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "0000"
align = 1
valign = 1
script = ExtResource( 15 )

[node name="MenuMove" type="AudioStreamPlayer" parent="Menu"]
stream = ExtResource( 10 )
bus = "Selection"

[node name="MenuSelect" type="AudioStreamPlayer" parent="Menu"]
stream = ExtResource( 11 )
bus = "Selection"

[node name="FadeIn" parent="." instance=ExtResource( 5 )]
visible = false

[node name="Musica_fundo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
bus = "Musics"

[node name="HSlider" type="HSlider" parent="."]
margin_left = 125.749
margin_top = 456.527
margin_right = 214.749
margin_bottom = 552.527
rect_scale = Vector2( 1.8, 2 )
min_value = -65.0
max_value = -19.0
value = -19.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="botao_som" type="TextureButton" parent="HSlider"]
margin_left = -67.2339
margin_top = 21.5313
margin_right = 832.766
margin_bottom = 541.531
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 13 )
texture_disabled = ExtResource( 14 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="Menu/CenterRow/Buttons/NewGameButton" to="." method="_on_NewGameButton_button_up"]
[connection signal="gui_input" from="Menu/CenterRow/Buttons/NewGameButton" to="." method="_on_NewGameButton_gui_input"]
[connection signal="mouse_entered" from="Menu/CenterRow/Buttons/NewGameButton" to="." method="_on_NewGameButton_mouse_entered"]
[connection signal="gui_input" from="Menu/CenterRow/Buttons/InstructionsButton" to="." method="_on_InstructionsButton_gui_input"]
[connection signal="mouse_entered" from="Menu/CenterRow/Buttons/InstructionsButton" to="." method="_on_InstructionsButton_mouse_entered"]
[connection signal="button_down" from="Menu/CenterRow/Buttons/CreditsButton" to="." method="_on_CreditsButton_button_down"]
[connection signal="gui_input" from="Menu/CenterRow/Buttons/CreditsButton" to="." method="_on_CreditsButton_gui_input"]
[connection signal="mouse_entered" from="Menu/CenterRow/Buttons/CreditsButton" to="." method="_on_CreditsButton_mouse_entered"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
[connection signal="mouse_exited" from="HSlider" to="." method="release_focus"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="HSlider/botao_som" to="." method="_on_botao_som_pressed"]
[connection signal="pressed" from="HSlider/botao_som" to="." method="_on_TextureButton_pressed"]
